Employee details improved. Vertical-alignment in table temporary fix

--- a/src/app/feature-modules/employee-manager/components/employee-table/employee-table.component.scss
+++ b/src/app/feature-modules/employee-manager/components/employee-table/employee-table.component.scss
@@ -32,7 +32,7 @@
     width: auto;
     white-space: nowrap;
     overflow: hidden;
-    vertical-align: middle;
+    vertical-align: sub;
     text-align: center;
 
     &-skills {
