--- a/src/app/shared/components/level-stars/level-stars.component.scss
+++ b/src/app/shared/components/level-stars/level-stars.component.scss
@@ -1,5 +1,4 @@
 .level {
-  width: fit-content;
   margin: 0;
 
   &__stars {
